<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent_style"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtview_barcode_result"
        style="@style/textview_label"
        android:text="@string/msg_click_button_to_read_barcode"/>
    <LinearLayout
        style="@style/match_wrap_style"
        android:orientation="horizontal">
    <Switch
        android:id="@+id/auto_focus"
        style="@style/textview_label"
        android:layout_weight="1"
        android:checked="false" />
        <TextView
            android:id="@+id/tv_lbl_autofocus"
            style="@style/textview_label"
            android:layout_weight=".2"
            android:text="@string/lbl_auto_focus"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnReadBarcode"
        style="@style/btn_common"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/lbl_read_barcode"/>
</LinearLayout>