<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_wrap_style"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout style="@style/match_wrap_style">

        <ImageView
            android:id="@+id/iv_selected_model"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/ic_logo"
            android:layout_margin="@dimen/_5sdp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tv_lbl_selected_model"
            style="@style/textview_label"
            android:layout_toRightOf="@+id/iv_selected_model"
            android:text="@string/lbl_selected_model_is" />

        <TextView
            android:id="@+id/tv_selected_model"
            style="@style/textview_label"
            android:layout_toRightOf="@+id/iv_selected_model"
            android:layout_below="@id/tv_lbl_selected_model"
            android:textSize="@dimen/_14sdp"
            android:text="@string/lbl_model_1" />
    </RelativeLayout>

    <LinearLayout
        style="@style/match_wrap_style"
        android:layout_margin="@dimen/_5sdp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tv_selected_model"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            style="@style/btn_common"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="@color/colorBackground"
            android:text="@string/lbl_back" />

        <Button
            android:id="@+id/btnOkay"
            style="@style/btn_common"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="top"
            android:background="@color/colorBackground"
            android:text="@string/lbl_okay" />
    </LinearLayout>
</LinearLayout>